[package]
name = "wcrypt"
version = "0.1.0"
authors = ["Ferdinand Linnenberg <ferdinand@linnenberg.dev>"]
edition = "2021"
description = "A simple webassembly cryptography library"
repository = "https://github.com/Scarjit/wcrypt"
license = "MIT or Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
aes-gcm-siv = { version = "0.11.1" }
web-sys = { version = "0.3.64", features = ["console"] }
getrandom = { version = "0.2.10", features = ["js"]}
sha3 = "0.10.8"
base64 = "0.21.2"
anyhow = { version = "1.0.71", default-features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
